# snes-apu

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: spc_player.rs
src/: apu.rs  binary_reader.rs  lib.rs  main.rs  ring_buffer.rs  smp.rs  spc.rs  timer.rs  voice.rs
src/dsp/: brr_block_decoder.rs  dsp.rs  envelope.rs  filter.rs  gaussian.rs  mod.rs  ring_buffer.rs  voice.rs
src/snes_apu/: apu.rs  binary_reader.rs  brr_block_decoder.rs  dsp.rs  dsp_helpers.rs  envelope.rs  filter.rs  mod.rs  ring_buffer.rs  smp.rs  spc.rs  timer.rs  voice.rs
test/: ferris-nu.spc  smashit.spc
test/broken/: b0rked.spc
