[package]
name = "snes-apu"
version = "0.1.12"
authors = ["ferris <jake@fusetools.com>"]
description = "A Super Nintendo audio unit emulator."
homepage = "https://github.com/emu-rs/snes-apu"
repository = "https://github.com/emu-rs/snes-apu"
keywords = ["snes", "super", "nintendo", "spc", "emulator"]
license = "BSD-2-Clause"

[dependencies]
spc = "0.1.0"

[dev-dependencies]
cpal = "0.4.4"
futures = "0.1.1"
